# grpc-tutor

./: .clang-format  .gitignore  Cargo.toml  README.md  pyproject.toml  rust-toolchain.toml
.github/workflows/: build.yml
data/: route_guide_db.json
protos/: addressbook.proto  helloworld.proto  route_guide.proto
py/: helloworld_pb2.py  helloworld_pb2.pyi  helloworld_pb2_grpc.py  helloworld_pb2_grpc.pyi  route_guide_pb2.py  route_guide_pb2_grpc.py  route_guide_pb2_grpc.pyi
py/addressbook/: addressbook_pb2.py  addressbook_pb2_grpc.py
py/grpc_tutor/: __init__.py  greeter_client.py  greeter_server.py  route_guide_client.py  route_guide_server.py
py/grpc_tutor/route_guide_db/: __init__.py  db.json
py/helloworld/: greeter_client.py  greeter_server.py  helloworld_pb2.py  helloworld_pb2_grpc.py
py/route_guide/: route_guide_client.py  route_guide_db.py  route_guide_pb2.py  route_guide_pb2_grpc.py  route_guide_server.py
py/route_guide/route_guide_db/: __init__.py
rs/helloworld/: Cargo.toml  README.md  build.rs
rs/helloworld/src/: lib.rs
rs/routeguide/: Cargo.toml  README.md  build.rs
rs/routeguide/src/: data.rs  lib.rs  server.rs  util.rs
scripts/: gen-python.bash
