[workspace]
resolver = "2"
members = ["./rs/*"]

[workspace.package]
edition = "2021"
version = "0.1.0"
publish = false

[workspace.dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
async-stream = "0.3.6"
axum.version = "0.7.9" # to adjust with tonic
axum.features = ["http2"]
bytes = "1.9.0"
futures = "0.3.31"
http = "1.2.0"
http-body = "1.0.1"
http-body-util = "0.1.2"
hyper = { version = "1.5.2", features = ["server", "http1", "http2", "tracing"] }
hyper-util = { version = "0.1.10", features = ["tokio", "server-auto", "server-graceful", "service"] }
prost = "0.13.4"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tonic.version = "0.12.3"
tonic.default-features = false
tonic.features = ["codegen", "prost", "channel"]
tonic-build = "0.12.3"
tonic-web = "0.12.3"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["full"] }
tower = { version = "0.5.2", features = ["util", "steer"] }
tower-http = { version = "0.6.2", features = ["trace", "util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
