[project]
name = "grpc-tutor"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "H1rono", email = "hronok66@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
hello = "grpc_tutor:hello"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.setuptools.packages.find]
where = ["py"]
