[project]
name = "grpc-tutor"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "H1rono", email = "hronok66@gmail.com" }
]
dependencies = [
    "grpcio>=1.64.1",
    "grpcio-tools>=1.0.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
hello = "grpc_tutor:hello"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.rye]
managed = true
dev-dependencies = []

[tool.setuptools.packages.find]
where = ["py"]
