[package]
name = "helloworld"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "helloworld-server"
path = "src/bin/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/bin/client.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
bytes.workspace = true
http.workspace = true
prost.workspace = true
tonic.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
tonic-build.workspace = true
