[package]
name = "routeguide"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "routeguide-server"
path = "src/bin/server.rs"

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
futures.workspace = true
prost.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tonic.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
tonic-build.workspace = true
