[package]
name = "routeguide"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "routeguide-server"
path = "src/bin/server.rs"

[[bin]]
name = "routeguide-client"
path = "src/bin/client.rs"

[[bin]]
name = "routeguide-multiplex"
path = "src/bin/multiplex.rs"

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
axum.workspace = true
futures.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
prost.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tonic.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
tonic-build.workspace = true
